--- a/public/css/adminpanel.css
+++ b/public/css/adminpanel.css
@@ -111,6 +111,18 @@
     border-radius: 0px 0px 10px 10px;
     cursor: pointer;
 }
+.more_info a{
+text-decoration: none;
+color: white;
+}
+.more_info_tech a{
+text-decoration: none;
+color: white;
+}
+.more_info_qa a{
+text-decoration: none;
+color: white;
+}
 
 .more_info_text{
     color: white;
