--- a/public/css/style.css
+++ b/public/css/style.css
@@ -65,7 +65,7 @@ body {
  
 }
 .con{
-  height:400px;
+  height: 840px;
   display: flex;
   text-align:center;
   padding: 20px;
@@ -90,6 +90,8 @@ body {
 }
 .card{
   margin-left: 10px;
+  height: 360px;
+  margin-top: 30px;
 }
 .carousel{
   margin-top: 20px;
@@ -103,17 +105,7 @@ body {
   
 }
 
-.card{
-  box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
-}
 
-.section{
-  justify-content: center;
-  height:600px;
-  box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
-
-
-}
 
 * {
   -webkit-box-sizing: border-box;
@@ -125,12 +117,13 @@ body {
 }
 
 .gallery-cell {
-  margin-top: 100px !important;
+  margin-top: 20px !important;
   width: 66%;
+  margin-bottom: 20px !important;
   height: 300px !important;
   margin-left: 70px;
-  background-color:#8C8;
   border-radius:20px;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 
   /* counter-increment: gallery-cell; */
 }
@@ -151,18 +144,20 @@ body {
   margin-left: 100px !important;
   background-color:#8C8;;
   border:none;
+  display: none;
 }
 .flickity-prev-next-button.previous {
-  margin-left: 580px !important;
+  /* margin-left: 580px !important;
   margin-top: 60px;
   background-color:#8C8;;
-  border:none;
+  border:none; */
+  display: none;
 }
 
 .flickity-enabled.is-draggable {
-margin-top: 70px;
+margin-top: 50px;
 }
 .flickity-viewport{
-  box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+  margin-bottom: 40px;
 
 }
