--- a/public/css/adminpanel.css
+++ b/public/css/adminpanel.css
@@ -96,6 +96,13 @@
     border-radius: 10px;
 }
 
+
+#white-box{
+    background-color: white;
+    padding: 20px;
+    margin: 20px;
+    /* border-radius: 10px; */
+}
 .big_box{
     background-color: #fff;
     border-radius: 10px;
@@ -245,10 +252,12 @@ color: white;
     /* padding: 5px; */
 }
 
-footer{
+.footerr{
     position: fixed;
-    width: 100%;
-    height:10%;
+    left: 0;
+   bottom: 0;
+   width: 100%;
+   background-color:white;
     border-top: 2px solid rgb(194, 192, 192);
 }
 footer a{
@@ -386,3 +395,5 @@ footer a{
     border: none;
     outline: none;
 }
+
+
