--- a/public/css/login.css
+++ b/public/css/login.css
@@ -180,6 +180,14 @@ a:hover{
 .btn:hover{
 	background-position: right;
 }
+.login_btn{
+
+    color: #999;
+}
+
+.signup_btn{
+    color: #999;
+}
 
 
 @media screen and (max-width: 1050px){
@@ -218,5 +226,34 @@ a:hover{
 
 	.login-content{
 		justify-content: center;
+	}
+}
+.alert{
+	background-color: #32be8f;
+	animation: slideMe .20s ease-in;
+
+}
+@keyframes slideMe{
+	0%{
+		transform:skewX(53deg) translateY(-50px);
+	}
+	60%{
+		transform:skew(0px);
+	}
+	62%{
+		transform:skewX(0deg) translateY(30px);
+	}
+	70%{
+		transform:skew(-20deg);
+		opacity: 1;
+	}
+	80%{
+		transform:skew(0deg) translate(0);
+	}
+	90%{
+		transform: skew(-5deg);
+	}
+	100%{
+		transform:skew(0deg);
 	}
 }
