--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,7 +3,7 @@ body {
   padding: 0px;
   /* background-color: #b3b6b7; */
   
-  font-family: 'Source Sans Pro', sans-serif;
+  font-family: 'Open Sans',sans-serif;
   
   
 }
@@ -49,6 +49,7 @@ body {
 .nav-item a {
   font-weight: 700;
   color:black;
+  font-family: "Josefin Sans",sans-serif;
 }
 .nav-item a:hover {
  
@@ -65,13 +66,15 @@ body {
  
 }
 .con{
-  height: 840px;
+  height: 800px;
   display: flex;
   text-align:center;
   padding: 20px;
   justify-content: space-evenly;
-  margin-top:50px;
-  box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
+  margin-top:60px;
+  box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px, rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
+
+ 
 }
 
 .nav-item:hover{
@@ -88,10 +91,27 @@ body {
   50%  { transform: translateY(10px); }
   100% { transform: translateY(0); }
 }
+.text{
+  font-size: 49px;
+  font-weight: 600;
+  color: #030431;
+  margin-top: 100px;
+}
 .card{
-  margin-left: 10px;
+  margin-left:1px !important;
+  justify-content: left;
   height: 360px;
-  margin-top: 30px;
+  margin-top: 90px;
+  border-radius: none;
+  transition: transform .2s;
+ width:10%;
+ 
+ 
+}
+.card:hover {
+  /* -ms-transform: scale(1.5);
+  -webkit-transform: scale(0.5);
+  transform: scale(1.5);  */
 }
 .carousel{
   margin-top: 20px;
@@ -101,13 +121,13 @@ body {
 }
 .section{
   width:100%;
-  height:200px;
+  height:600px !important;
   
 }
 
 
 
-* {
+*{
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
 }
@@ -117,15 +137,21 @@ body {
 }
 
 .gallery-cell {
-  margin-top: 20px !important;
+  margin-top: 80px !important;
   width: 66%;
-  margin-bottom: 20px !important;
-  height: 300px !important;
+  margin-bottom: 80px !important;
+  height:300px !important;
   margin-left: 70px;
   border-radius:20px;
-  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+  transition: transform .2s;
+  box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
 
-  /* counter-increment: gallery-cell; */
+ 
+}
+.gallery-cell:hover{
+  -ms-transform: scale(1.8); 
+  -webkit-transform: scale(0.5); /* Safari 3-8 */
+  transform: scale(1.3); 
 }
 .cell_one{
   width:40%;
@@ -155,7 +181,7 @@ body {
 }
 
 .flickity-enabled.is-draggable {
-margin-top: 50px;
+margin-top: 70px;
 }
 .flickity-viewport{
   margin-bottom: 40px;
