--- a/public/css/style.css
+++ b/public/css/style.css
@@ -20,7 +20,9 @@ body {
 }
 .COL {
   margin-top: 15px;
+  width:60%;
 }
+
 .dropdown {
   margin-top: 5px;
   border: none;
@@ -72,7 +74,7 @@ body {
   padding: 20px;
   justify-content: space-evenly;
   margin-top:60px;
-  box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px, rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
+  /* box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px, rgba(14, 30, 37, 0.32) 0px 2px 16px 0px; */
 
  
 }
@@ -95,23 +97,23 @@ body {
   font-size: 49px;
   font-weight: 600;
   color: #030431;
-  margin-top: 100px;
+  margin-top: 5%;
 }
 .card{
-  margin-left:1px !important;
+  margin-left:10px !important;
   justify-content: left;
   height: 360px;
   margin-top: 90px;
   border-radius: none;
   transition: transform .2s;
- width:10%;
+  width:10%;
  
  
 }
 .card:hover {
-  /* -ms-transform: scale(1.5);
-  -webkit-transform: scale(0.5);
-  transform: scale(1.5);  */
+  -ms-transform: scale(1.8); 
+  -webkit-transform: scale(0.5); /* Safari 3-8 */
+  transform: scale(1.2); 
 }
 .carousel{
   margin-top: 20px;
@@ -121,11 +123,10 @@ body {
 }
 .section{
   width:100%;
+  margin-top: 40px;
   height:600px !important;
   
 }
-
-
 
 *{
   -webkit-box-sizing: border-box;
@@ -137,10 +138,10 @@ body {
 }
 
 .gallery-cell {
-  margin-top: 80px !important;
+  margin-top: 60px !important;
   width: 66%;
   margin-bottom: 80px !important;
-  height:300px !important;
+  height:250px !important;
   margin-left: 70px;
   border-radius:20px;
   transition: transform .2s;
@@ -154,7 +155,8 @@ body {
   transform: scale(1.3); 
 }
 .cell_one{
-  width:40%;
+  width:30%;
+  background-color:aquamarine;
 }
 /* cell number */
 /* .gallery-cell:before {
@@ -181,9 +183,113 @@ body {
 }
 
 .flickity-enabled.is-draggable {
-margin-top: 70px;
+margin-top: 5%;
 }
 .flickity-viewport{
-  margin-bottom: 40px;
+  margin-bottom: 80px;
 
+}
+/* footer designnnnn****************************************************** */
+
+/* .footer-box{
+  width:100%;
+  height: 500px;
+  background-color:black;
+  color:white;
+  margin-top: 10%;
+  
+} */
+.footer-dark {
+  padding:50px 0;
+  margin-top: 10%;
+  color:white;
+  height:300px;
+  background-color:#282d32;
+}
+
+.footer-dark h3 {
+  margin-top:10px;
+  margin-bottom:12px;
+  font-weight:bold;
+  font-size:16px;
+}
+
+.footer-dark ul {
+  padding:0;
+  list-style:none;
+  line-height:1.6;
+  font-size:14px;
+  margin-bottom:0;
+}
+
+.footer-dark ul a {
+  color:inherit;
+  text-decoration:none;
+  opacity:0.6;
+}
+
+.footer-dark ul a:hover {
+  opacity:0.8;
+}
+
+@media (max-width:767px) {
+  .footer-dark .item:not(.social) {
+    text-align:center;
+    padding-bottom:20px;
+  }
+}
+
+.footer-dark .item.text {
+  margin-bottom:36px;
+}
+
+@media (max-width:767px) {
+  .footer-dark .item.text {
+    margin-bottom:0;
+  }
+}
+
+.footer-dark .item.text p {
+  opacity:0.6;
+  margin-bottom:0;
+  margin-top: 30px;
+}
+
+.footer-dark .item.social {
+  text-align:center;
+  margin-top: 60px;
+}
+
+@media (max-width:991px) {
+  .footer-dark .item.social {
+    text-align:center;
+    margin-top:20px;
+  }
+}
+
+.footer-dark .item.social > a {
+  font-size:20px;
+  width:36px;
+  height:36px;
+  line-height:36px;
+  display:inline-block;
+  text-align:center;
+  border-radius:50%;
+  box-shadow:0 0 0 1px rgba(255,255,255,0.4);
+  margin:0 8px;
+  color:#fff;
+  opacity:0.75;
+}
+
+.footer-dark .item.social > a:hover {
+  opacity:0.9;
+}
+
+.footer-dark .copyright {
+  text-align:center;
+  padding-top:24px;
+  opacity:0.3;
+  font-size:13px;
+  margin-top: 60px;
+  margin-bottom:0;
 }
