--- a/public/css/style.css
+++ b/public/css/style.css
@@ -230,7 +230,8 @@ width:100%;
   margin-top: 2%;
 }
 .tech_display{
-  background-color: black;
+  background-color: whitesmoke ;
   width:100%;
   height:120px;
+  /* margin-top:30px; */
 }
