--- a/public/css/style.css
+++ b/public/css/style.css
@@ -230,8 +230,20 @@ width:100%;
   margin-top: 2%;
 }
 .tech_display{
-  background-color: whitesmoke ;
+  /* background-color: pink; */
   width:100%;
-  height:120px;
-  /* margin-top:30px; */
+  height:700px;
+  margin-top:-10px;
+  
+}
+.question_display{
+  
+  height:700px;
+  width:70%;
+  box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
+  margin-left:15%;
+  margin-top:5px;
+}
+.white_boxes{
+  margin-top:10px !important;
 }
