--- a/public/css/style.css
+++ b/public/css/style.css
@@ -232,18 +232,22 @@ width:100%;
 .tech_display{
   /* background-color: pink; */
   width:100%;
-  height:700px;
-  margin-top:-10px;
+  /* margin-top:10px; */
   
 }
 .question_display{
   
-  height:700px;
   width:70%;
+  height: 1500px;
   box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
   margin-left:15%;
-  margin-top:5px;
 }
-.white_boxes{
-  margin-top:10px !important;
+.paginate{
+/* position: absolute; */
+left: 200px;
+margin-top: -37px;
 }
+
+
+
+
