--- a/public/css/style.css
+++ b/public/css/style.css
@@ -230,8 +230,22 @@ body {
     margin-top: 2%;
   }
   .tech_display{
-    background-color: whitesmoke ;
+    /* background-color: pink; */
     width:100%;
-    height:120px;
-    /* margin-top:30px; */
+    /* margin-top:10px; */
+
   }
+  .question_display{
+
+    width:70%;
+    height: 1500px;
+    margin-left:15%;
+  }
+  .paginate{
+  /* position: absolute; */
+  left: 200px;
+  margin-top: -37px;
+  }
+
+
+
