--- a/public/css/adminpanel.css
+++ b/public/css/adminpanel.css
@@ -87,6 +87,31 @@
     text-transform: capitalize;
 }
 
+.notification_bar{
+
+    margin-top: 18px;
+    margin-left: 20px;
+}
+
+
+#bi{
+    font-size: x-large;
+    cursor: pointer;
+}
+
+.red_circle{
+    font-size: 12px;
+}
+.count{
+    text-align: center;
+    position: absolute;
+    width: 15px;
+    background-color: red;
+    border-radius: 40%;
+    margin-left: -10px;
+    font-size: 13px;
+}
+
 .container-fluid{
     background-color: #e8eaec;
 }
@@ -502,4 +527,73 @@ footer a{
 
   .img_circle{
     border-radius: 20px;
+}
+
+.profile{
+    margin-left: 30%;
+}
+
+.dropdown-content{
+    display: none;
+    position: absolute;
+    left: -40px;
+    top: 30px;
+    background-color: white;
+    width: 200px;
+    padding: 10px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+    text-align: center;
+    border-radius: 10px;
+    color: black;
+}
+
+.dropdown{
+    position: relative;
+    display: inline-block;
+}
+
+.dropdown:hover .dropdown-content{
+    display: block;
+}
+
+.dropdown-content h5{
+    font-family: Whitney,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica,Arial,sans-serif;
+}
+
+.assign_marks_btn{
+    /* background-color: #78d3f7; */
+    /* border: none; */
+    outline: none;
+}
+
+.marks_on_each{
+    width: 150px;
+    justify-items: end;
+}
+
+.test_marks_btn{
+    background-color: gray;
+    padding: 10px 25px;
+    border-radius: 20px;
+    color: white;
+    border: none;
+    outline: none;
+    text-align: center;
+}
+
+.test_btn{
+    text-align: center;
+}
+
+.tick
+{
+    margin-left: 15px;
+    margin-top: 10px;
+    cursor: pointer;
+}
+
+.green
+{
+    color: rgb(86, 199, 86);
 }
