--- a/public/css/style.css
+++ b/public/css/style.css
@@ -124,6 +124,11 @@ body {
  
  
 }
+.card-title{
+  font-weight:700;
+  margin-top:40px;
+   font-size:25px;
+}
 .btn{
   border-radius: none;
 }
@@ -151,6 +156,15 @@ body {
 *{
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
+}
+.tech_name{
+  margin-top:20%;
+}
+.card-text{
+  margin-top:20px; font-size:12px;
+}
+.d-block{
+  width:100%; height:490px; padding:0px;
 }
 
 .gallery {
@@ -247,22 +261,34 @@ width:100%;
   margin-top: 2%;
 }
 .tech_display{
-  /* background-color: pink; */
-  width:100%;
-  /* margin-top:10px; */
   
+  width:100%;
+  margin-top: -90px;
+}
+.back_btn{
+  margin-left:70px;
+}
+.experieance_table{
+  margin-left:770px;
 }
 .question_display{
-  
   width:70%;
-  height: 1500px;
+  background-color:#E0E0E0;
   box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
   margin-left:15%;
+  /* padding:10px; */
+}
+#ques{
+  position: relative;
+  height:auto;
 }
 .paginate{
 /* position: absolute; */
 left: 200px;
 margin-top: -37px;
+}
+.link{
+  border:1px solid green;
 }
 
 /* quiz -question design code */
@@ -293,7 +319,32 @@ margin-top: -37px;
   margin-left: 10%;
   padding:5px;
 }
+.pagination{
+  margin-left:10%;
+  margin-top:3%;
 
+}
+.frame1{
+  text-decoration:none; 
+  color:black
+}
+.quiz_question{
+  background-color:black;
+  height:70px;
+   color:white;
+   text-align:center;
+}
+.enter{
+  margin-left:120px;
+}
+.update
+{
+  margin-left:120px;
+}
+#submit{
+  width:70%;
+  margin-left:10%;
+}
 
 
 
