--- a/public/css/adminpanel.css
+++ b/public/css/adminpanel.css
@@ -340,28 +340,28 @@ footer a{
     display: inline-block;
   }
 
-.dropdown-content{
+.dropdown-menu{
     display: none;
     position: absolute;
     right: 0px;
     background-color: white;
-    width: 200px;
-    padding: 20px;
+    width: 100px;
+    padding: 10px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
     text-align: center;
     border-radius: 10px;
   }
 
-.dropdown:hover .dropdown-content{
+.dropdown:hover .dropdown-menu{
     display: block;
 }
 
-.dropdown-content h6{
+.dropdown-menu h6{
     font-family: Whitney,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica,Arial,sans-serif;
 }
 
-.dropdown-content p{
+.dropdown-menu p{
     font-family: Whitney,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica,Arial,sans-serif;
     font-size: small;
 }
@@ -562,10 +562,11 @@ footer a{
 }
 
 .assign_marks_btn{
-    /* background-color: #78d3f7; */
-    /* border: none; */
+   background: rgb(231, 231, 231);
     outline: none;
+    border: none;
 }
+
 
 .marks_on_each{
     width: 150px;
@@ -573,7 +574,7 @@ footer a{
 }
 
 .test_marks_btn{
-    background-color: gray;
+    background-color: rgb(31, 117, 64);
     padding: 10px 25px;
     border-radius: 20px;
     color: white;
@@ -618,8 +619,9 @@ footer a{
     color: black;
 }
 
-/*
-#start_quiz{
+.breadcrumb-item a{
     text-decoration: none;
     color: black;
-} */
+
+}
+
