--- a/public/css/style.css
+++ b/public/css/style.css
@@ -226,6 +226,12 @@ body {
     padding:0px;
 
   }
+
+  #myModal{
+    top:5%;
+    width:30%;
+    left:65%;
+  }
   /* footer designnnnn****************************************************** */
 
 
@@ -293,6 +299,11 @@ body {
 
   /* quiz -question design code */
 
+  .alert{
+    width:40%;
+    left:30%;
+    height: 50px;
+  }
   .section{
     position:relative;
     width:80%;
@@ -346,4 +357,20 @@ body {
     margin-left:10%;
   }
 
+  .page_loader{
+    display: flex;
+    justify-content: center;
+    margin-top: 30px;
+    margin-bottom: 20px;
+
+}
+
+.pageloader_button{
+    padding: 7px 20px;
+    border-radius: 15px;
+    color: #fff;
+    background-color: rgb(0, 183, 255);
+    border: none;
+    outline: none;
+}
 
