--- a/public/css/style.css
+++ b/public/css/style.css
@@ -30,6 +30,15 @@ body {
     margin-left: 20px;
     border-radius: 50%;
   }
+  .count{
+    text-align:center;
+     padding-top:3px;
+     width:10%;
+     background-color: red;
+     color:white;
+     border-radius:40%;
+     height:25px; font-size:12px;
+  }
   .img2 {
     width: 70px;
     margin-top: 2px;
@@ -146,8 +155,8 @@ body {
   #demo{
     padding: 0px;
   }
-  .section{
-    width:100%;
+  .slider{
+    width: 100% !important;
     margin-top: 40px;
     height:600px !important;
 
@@ -190,7 +199,8 @@ body {
   }
   .cell_one{
     width:30%;
-    background-color:aquamarine;
+    background-color:#2D3092;
+    color:whitesmoke;
   }
   /* cell number */
   /* .gallery-cell:before {
@@ -203,9 +213,9 @@ body {
   } */
   .flickity-prev-next-button.next {
 
-    margin-left: 100px !important;
+    /* margin-left: 100px !important;
     background-color:#8C8;;
-    border:none;
+    border:none; */
     display: none;
   }
   .flickity-prev-next-button.previous {
@@ -373,4 +383,3 @@ body {
     border: none;
     outline: none;
 }
-
