--- a/public/css/style.css
+++ b/public/css/style.css
@@ -176,7 +176,9 @@ body {
     margin-top:20px; font-size:12px;
   }
   .d-block{
-    width:100%; height:490px; padding:0px;
+    width:100%;
+    height:490px;
+     padding:0px;
   }
 
   .gallery {
