--- a/public/css/style.css
+++ b/public/css/style.css
@@ -253,12 +253,18 @@ body {
 
   .typefoot{
     width:100%;
+    height:200px;
     max-width: 100%;
     background-color: grey;
     height: 400px;
     padding: 0px 0px 0px 0px;
   }
   /* technology blade page design******************************** */
+.errorImg{
+
+  width:40%;
+  margin-left: 25%;
+}
 
   .div1{
     text-align: center;
