Add User mail functionality & Auto submit on Timer

--- a/public/css/adminpanel.css
+++ b/public/css/adminpanel.css
@@ -666,3 +666,13 @@ footer a{
     width: 60px;
 }
 
+.emaildetails{
+    width:50%;
+    margin-left:20%;
+    margin-top:5px;
+
+}
+.sendMail{
+    text-decoration: none;
+    font-size:22px;
+}
