--- a/public/css/style.css
+++ b/public/css/style.css
@@ -25,7 +25,7 @@ body {
     width: 200px;
     height: 40px;
     margin-left: 60px;
-    margin-top: 40px;
+    margin-top: 23px;
 
   }
   .COL {
@@ -240,17 +240,24 @@ body {
 
   }
 
-  #myModal{
+
+  .modalDesign{
+    margin-top: 100px;
+    margin-left: 580px;
+    width: 70%;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  }
+
+  /* #myModal{
     top:5%;
     width:30%;
     left:65%;
-  }
-  
+  } */
  .notification_design{
   text-decoration: none !important;
+
   color:black;
  }
-
  .notification_design:hover{
   color:black;
  }
@@ -415,7 +422,7 @@ body {
 
 }
 #skipAnswer{
-  margin-left: 57%;
+  margin-left: 52%;
   margin-top: 3px;
 
 }
@@ -465,6 +472,9 @@ color: black;
 }
 #datatable_wrapper{
   text-decoration-style:white;
+}
+.nextQuiz{
+  margin-left: 20px;
 }
 
 .countdown-section{
