--- a/public/css/user.css
+++ b/public/css/user.css
@@ -33,7 +33,9 @@
         margin-top:49;
         width:50px;
      }
-
+/* .dropdown-item{
+    font-size: 10px;
+} */
 
 /*
      .ques{
@@ -55,6 +57,8 @@
       width: 100%;
 
      }
+
+
 
 /*
   .page_loader{
