--- a/public/css/style.css
+++ b/public/css/style.css
@@ -23,7 +23,7 @@ body {
   }
   .img{
     width: 200px;
-    height: 40px;
+    height: 30px;
     margin-left: 60px;
     margin-top: 23px;
 
@@ -34,40 +34,47 @@ body {
     padding:25px;
   }
   .username{
-    margin-left:-10px;
+    margin-left:60px;
   }
 
   .dropdown {
-    margin-top: 0px;
-    border: none;
-    margin-left: 30px;
+      width:70px;
+      margin-top: 2px;
+        border: none;
+        margin-left:40px;
     border-radius: 50%;
   }
   .count{
     text-align:center;
     margin-top:30px;
-     padding-top:4px;
-     width:8%;
+     padding-top:0px;
+     width:10%;
      background-color: red;
      color:white;
-     border-radius:45%;
-     height:25px; font-size:12px;
+     border-radius:60%;
+     height:25px;
+     font-size:12px;
   }
   .img2 {
-    width: 70px;
-    margin-top: 2px;
-    margin-left: -40px;
+    width: 100%;
+    margin-top:2px;
+    margin-left:2px;
     height: 50px;
     border-radius: 50%;
   }
   .dropdown-menu {
-    width:30%;
-    margin-top: 20% !important;
-    margin-left:-45% !important;
+    width:60%;
+    margin-top: 28% !important;
+    margin-left:4% !important;
 
   }
+  /* .show{
+    margin-left:120% !important;
+
+  } */
   .bell{
     cursor:pointer;
+    margin-top: 42px;
   }
 
 
@@ -242,10 +249,10 @@ body {
 
 
   .modalDesign{
-    margin-top: 100px;
+    margin-top: 80px;
     margin-left: 580px;
     width: 70%;
-    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+
   }
 
   /* #myModal{
@@ -490,3 +497,7 @@ color: black;
 }
 
 
+.veer{
+    margin-left: 80%;
+    font-size:small;
+ }
