changes done for mcq admin end

--- a/public/css/adminpanel.css
+++ b/public/css/adminpanel.css
@@ -715,3 +715,10 @@ footer a{
 .noofquestion{
     margin-top: 10px;
 }
+.copy{
+    display: none;
+}
+.add-more-input{
+    margin-right: 4px;
+    border-radius: 15px !important;
+}
